# serverless-dts-generator

./: Cargo.toml  README.md
.github/workflows/: markdownlint.yml  rust.yml
src/: main.rs  model.rs
